CREATE TABLE "accessory" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" varchar(20),
  "uriImage" text,
  "name" text,
  "sizeUSLetter" size_us_letter,
  "sizeUSNumber" float,
  "brand" text,
  "description" text,
  "timestampAddedRFC" timestamp,
  "timestampLastModifiedRFC" timestamp,
  "timestampPurchasedRFC" timestamp,
  "rating" int,
  "itemCondition" item_condition,
  "itemStatus" item_status,
  "numberOfWears" int,
  "wearsBeforeDirty" int,
  "wearsLeftBeforeDirty" int,
  "primaryColor" text,
  "secondaryColor" text,
  "accentColor" text,
  "pattern" text,
  "type" accessory_type
);

CREATE TABLE "bottom" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" varchar(20),
  "uriImage" text,
  "name" text,
  "sizeUSLetter" size_us_letter,
  "sizeUSNumber" float,
  "brand" text,
  "description" text,
  "timestampAddedRFC" timestamp,
  "timestampLastModifiedRFC" timestamp,
  "timestampPurchasedRFC" timestamp,
  "rating" int,
  "itemCondition" item_condition,
  "itemStatus" item_status,
  "numberOfWears" int,
  "wearsBeforeDirty" int,
  "wearsLeftBeforeDirty" int,
  "primaryColor" text,
  "secondaryColor" text,
  "accentColor" text,
  "pattern" text,
  "layer" int,
  "type" bottom_type,
  "bottomInseamType" bottom_inseam_type,
  "inseamInches" float,
  "sizeHipInchesLow" float,
  "sizeHipInchesHigh" float
);

CREATE TABLE "feet" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" varchar(20),
  "uriImage" text,
  "name" text,
  "sizeUSLetter" size_us_letter,
  "sizeUSNumber" float,
  "brand" text,
  "description" text,
  "timestampAddedRFC" timestamp,
  "timestampLastModifiedRFC" timestamp,
  "timestampPurchasedRFC" timestamp,
  "rating" int,
  "itemCondition" item_condition,
  "itemStatus" item_status,
  "numberOfWears" int,
  "wearsBeforeDirty" int,
  "wearsLeftBeforeDirty" int,
  "primaryColor" text,
  "secondaryColor" text,
  "accentColor" text,
  "pattern" text,
  "layer" int,
  "type" feet_type,
  "sizeInches" float
);

CREATE TABLE "head" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" varchar(20),
  "uriImage" text,
  "name" text,
  "sizeUSLetter" size_us_letter,
  "sizeUSNumber" float,
  "brand" text,
  "description" text,
  "timestampAddedRFC" timestamp,
  "timestampLastModifiedRFC" timestamp,
  "timestampPurchasedRFC" timestamp,
  "rating" int,
  "itemCondition" item_condition,
  "itemStatus" item_status,
  "numberOfWears" int,
  "wearsBeforeDirty" int,
  "wearsLeftBeforeDirty" int,
  "primaryColor" text,
  "secondaryColor" text,
  "accentColor" text,
  "pattern" text,
  "layer" int,
  "type" head_type,
  "sizeInchesLow" float,
  "sizeInchesHigh" float
);

CREATE TABLE "outfit" (
  "id" int PRIMARY KEY,
  "uriImage" text,
  "occasion" outfit_type,
  "topId" int,
  "bottomId" int,
  "headId" int,
  "feetId" int,
  "wristId" int,
  "rating" int
);

CREATE TABLE "top" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" varchar(20),
  "uriImage" text,
  "name" text,
  "sizeUSLetter" size_us_letter,
  "sizeUSNumber" float,
  "brand" text,
  "description" text,
  "timestampAddedRFC" timestamp,
  "timestampLastModifiedRFC" timestamp,
  "timestampPurchasedRFC" timestamp,
  "rating" int,
  "itemCondition" item_condition,
  "itemStatus" item_status,
  "numberOfWears" int,
  "wearsBeforeDirty" int,
  "wearsLeftBeforeDirty" int,
  "primaryColor" text,
  "secondaryColor" text,
  "accentColor" text,
  "pattern" text,
  "layer" int,
  "type" top_type,
  "sizeChestInchesLow" float,
  "sizeChestInchesHigh" float,
  "sizeNeckInchesLow" float,
  "sizeNeckInchesHigh" float,
  "sizeWaistInchesLow" float,
  "sizeWaistInchesHigh" float,
  "sizeSleeveInches" float
);

CREATE TABLE "wrist" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "code" varchar(20),
  "uriImage" text,
  "name" text,
  "sizeUSLetter" size_us_letter,
  "sizeUSNumber" float,
  "brand" text,
  "description" text,
  "timestampAddedRFC" timestamp,
  "timestampLastModifiedRFC" timestamp,
  "timestampPurchasedRFC" timestamp,
  "rating" int,
  "itemCondition" item_condition,
  "itemStatus" item_status,
  "numberOfWears" int,
  "wearsBeforeDirty" int,
  "wearsLeftBeforeDirty" int,
  "primaryColor" text,
  "secondaryColor" text,
  "accentColor" text,
  "pattern" text,
  "type" wrist_type,
  "sizeInches" float
);

ALTER TABLE "outfit" ADD FOREIGN KEY ("topId") REFERENCES "top" ("id");

ALTER TABLE "outfit" ADD FOREIGN KEY ("bottomId") REFERENCES "bottom" ("id");

ALTER TABLE "outfit" ADD FOREIGN KEY ("headId") REFERENCES "head" ("id");

ALTER TABLE "outfit" ADD FOREIGN KEY ("feetId") REFERENCES "feet" ("id");

ALTER TABLE "outfit" ADD FOREIGN KEY ("wristId") REFERENCES "wrist" ("id");
